manifests/oauth-api/oauth-preview/app-service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth-api-preview
spec:
  selector:
    app: oauth-api
  ports:
  - port: 80
    targetPort: 8140
  type: ClusterIP
